--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^3.0.2",
     "mobx": "^5.1.0",
     "mobx-react": "^5.2.5",
     "mobx-state-tree": "^3.2.4",
